# localstack-extension

./: README.md  contributing.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml
authress/: __init__.py  extension.py
localstack_extension/: __init__.py  extension.py
localstack_extension_authress/: __init__.py  extension.py  server.py
