[metadata]
name = localstack-extension-authress
url = https://github.com/authress/authress-local
author = Authress
author_email = developers@authress.io
description = Add authentication, permissions, and access control to LocalStack
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[options]
zip_safe = False
packages = find:
install_requires =
    localstack>=2.2.1.dev20230812232603
    authress>=3.0.26

[options.entry_points]
localstack.extensions =
    localstack-extension-authress = localstack_extension_authress.extension:AuthressExtension